source/pages/profile.css
.topProfileSection {
    height: calc(20vh + 30px);
    width: 100%;
    padding-top: 30px;
}

.half-circle {
    position: absolute;
    left: 10vh;
    width: calc(20vh + 20px);
    height: calc(10vh + 10px);
    border-top-left-radius: 100vh;
    border-top-right-radius: 100vh;
    border: 10px solid var(--accent-color);
    border-bottom: 0;

    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    background-color: var(--bg-color);
    top: calc(5vh + 20px + 30px);
}

.pfpline {
    width: 100%;
    height: 10px;
    position: absolute;
    top: calc(15vh + 20px + 30px);
    left: 0;
    background-color: var(--accent-color);
}

.pfp {
    width: 20vh;
    height: 20vh;
    /*border: 2px solid var(--accent-color);*/
    border-radius: 50%;
    object-fit: fill;
    background-color: var(--bg-color);
    /*object-position: center center;*/
}

.top-background {
    background-color: var(--table-background);
    width: 100%;
    height: calc(15vh + 10px + 30px);
    position: relative;
    left: 0;
    top: unset;
    bottom: calc(15vh + 10px + 30px);
    z-index: -1;
}

.profileTopContent {
    position: absolute;
    top: calc(15vh - 2.5em + 30px);
    left: calc(10vh + calc(20vh + 20px));
    text-align: center;
    width: calc(100vw - calc(10vh + calc(20vh + 20px)));
}

@media (max-width: 650px) {
    .profileTopContent {
        left: calc(5vh + calc(20vh + 20px));
        width: calc(100vw - calc(5vh + calc(20vh + 20px)));
    }

    .half-circle {
        left: 5vh;
    }
}

@media (max-width: 500px) {
    .profileTopContent {
        left: calc(5vh + calc(10vh + 20px));
        width: calc(100vw - calc(5vh + calc(10vh + 20px)));
    }

    .pfp {
        width: 10vh;
        height: 10vh;
    }

    .half-circle {
        width: calc(10vh + 20px);
        height: calc(5vh + 10px);
    }

    .pfpline {
        top: calc(10vh + 20px + 30px);
    }

    .top-background {
        height: calc(10vh + 10px);
        top: unset;
        bottom: calc(10vh + 10px);
    }

    .profileTopContent {
        top: calc(10vh - 2.5em + 30px);
    }

    .topProfileSection {
        height: calc(10vh + 30px);
        margin-bottom: 10px;
    }
}

